--- a/src/Mod/Draft/Resources/Draft.qrc
+++ b/src/Mod/Draft/Resources/Draft.qrc
@@ -33,6 +33,7 @@
         <file>icons/preferences-draft.svg</file>
         <file>icons/Draft_Draft.svg</file>
         <file>icons/Draft_2DShapeView.svg</file>
+        <file>icons/Draft_Wipe.svg</file>
         <file>patterns/concrete.svg</file>
         <file>patterns/cross.svg</file>
         <file>patterns/line.svg</file>
