+ 0000450: new Icons for Part Work Bench, Ruled Surface, Shape Info, and Create Primitives
git-svn-id: https://free-cad.svn.sourceforge.net/svnroot/free-cad/trunk@5047 e8eeb9e2-ec13-0410-a4a9-efa5cf37419d

--- a/src/Mod/Part/Gui/Resources/Part.qrc
+++ b/src/Mod/Part/Gui/Resources/Part.qrc
@@ -9,6 +9,7 @@
         <file>icons/Part_Common.svg</file>
         <file>icons/Part_Cone.svg</file>
         <file>icons/Part_Cut.svg</file>
+        <file>icons/Part_CreatePrimitives.svg</file>        
         <file>icons/Part_Cylinder.svg</file>
         <file>icons/Part_Extrude.svg</file>
         <file>icons/Part_Fillet.svg</file>
@@ -17,7 +18,9 @@
         <file>icons/Part_Mirror.svg</file>
         <file>icons/Part_MirrorPNG.png</file>
         <file>icons/Part_Revolve.svg</file>
+        <file>icons/Part_RuledSurface.svg</file>
         <file>icons/Part_Section.svg</file>
+        <file>icons/Part_ShapeInfo.svg</file>
         <file>icons/Part_Sphere.svg</file>
         <file>icons/Part_Torus.svg</file>
         <file>icons/preferences-part_design.svg</file>
