+ icon for shape builder command
git-svn-id: https://free-cad.svn.sourceforge.net/svnroot/free-cad/trunk@5057 e8eeb9e2-ec13-0410-a4a9-efa5cf37419d

--- a/src/Mod/Part/Gui/Resources/Part.qrc
+++ b/src/Mod/Part/Gui/Resources/Part.qrc
@@ -9,7 +9,8 @@
         <file>icons/Part_Common.svg</file>
         <file>icons/Part_Cone.svg</file>
         <file>icons/Part_Cut.svg</file>
-        <file>icons/Part_CreatePrimitives.svg</file>        
+        <file>icons/Part_CreatePrimitives.png</file>
+        <file>icons/Part_CreatePrimitives.svg</file>
         <file>icons/Part_Cylinder.svg</file>
         <file>icons/Part_Extrude.svg</file>
         <file>icons/Part_Fillet.svg</file>
@@ -20,6 +21,7 @@
         <file>icons/Part_Revolve.svg</file>
         <file>icons/Part_RuledSurface.svg</file>
         <file>icons/Part_Section.svg</file>
+        <file>icons/Part_Shapebuilder.png</file>
         <file>icons/Part_ShapeInfo.svg</file>
         <file>icons/Part_Sphere.svg</file>
         <file>icons/Part_Torus.svg</file>
