--- a/src/Mod/Sketcher/Gui/TaskSketcherGeneral.ui
+++ b/src/Mod/Sketcher/Gui/TaskSketcherGeneral.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>257</width>
-    <height>79</height>
+    <width>153</width>
+    <height>88</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,12 +17,9 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
-      <widget class="QCheckBox" name="checkBoxGridSnap">
-       <property name="enabled">
-        <bool>true</bool>
-       </property>
+      <widget class="QLabel" name="label">
        <property name="text">
-        <string>Grid size</string>
+        <string>Grid size:</string>
        </property>
       </widget>
      </item>
@@ -36,92 +33,102 @@
        </property>
        <item>
         <property name="text">
-         <string>0.1 mm</string>
+         <string notr="true">0.1 mm</string>
         </property>
        </item>
        <item>
         <property name="text">
-         <string>0.2 mm</string>
+         <string notr="true">0.2 mm</string>
         </property>
        </item>
        <item>
         <property name="text">
-         <string>0.5 mm</string>
+         <string notr="true">0.5 mm</string>
         </property>
        </item>
        <item>
         <property name="text">
-         <string>1 mm</string>
+         <string notr="true">1 mm</string>
         </property>
        </item>
        <item>
         <property name="text">
-         <string>2 mm</string>
+         <string notr="true">2 mm</string>
         </property>
        </item>
        <item>
         <property name="text">
-         <string>5 mm</string>
+         <string notr="true">5 mm</string>
         </property>
        </item>
        <item>
         <property name="text">
-         <string>10 mm</string>
+         <string notr="true">10 mm</string>
         </property>
        </item>
        <item>
         <property name="text">
-         <string>20 mm</string>
+         <string notr="true">20 mm</string>
         </property>
        </item>
        <item>
         <property name="text">
-         <string>50 mm</string>
+         <string notr="true">50 mm</string>
         </property>
        </item>
        <item>
         <property name="text">
-         <string>100 mm</string>
+         <string notr="true">100 mm</string>
         </property>
        </item>
        <item>
         <property name="text">
-         <string>200 mm</string>
+         <string notr="true">200 mm</string>
         </property>
        </item>
        <item>
         <property name="text">
-         <string>500 mm</string>
+         <string notr="true">500 mm</string>
         </property>
        </item>
        <item>
         <property name="text">
-         <string>1 m</string>
+         <string notr="true">1 m</string>
         </property>
        </item>
        <item>
         <property name="text">
-         <string>2 m</string>
+         <string notr="true">2 m</string>
         </property>
        </item>
        <item>
         <property name="text">
-         <string>5 m</string>
+         <string notr="true">5 m</string>
         </property>
        </item>
        <item>
         <property name="text">
-         <string>10 m</string>
+         <string notr="true">10 m</string>
         </property>
        </item>
        <item>
         <property name="text">
-         <string>20 m</string>
+         <string notr="true">20 m</string>
         </property>
        </item>
       </widget>
      </item>
     </layout>
+   </item>
+   <item>
+    <widget class="QCheckBox" name="checkBoxGridSnap">
+     <property name="enabled">
+      <bool>true</bool>
+     </property>
+     <property name="text">
+      <string>Grid snap</string>
+     </property>
+    </widget>
    </item>
    <item>
     <widget class="QCheckBox" name="checkBoxAutoconstraints">
