--- a/src/Mod/Start/Gui/Resources/Start.qrc
+++ b/src/Mod/Start/Gui/Resources/Start.qrc
@@ -1,4 +1,20 @@
 <!DOCTYPE RCC><RCC version="1.0">
     <qresource> 
+        <file>translations/StartPage_af.qm</file>
+        <file>translations/StartPage_de.qm</file>
+        <file>translations/StartPage_es.qm</file>
+        <file>translations/StartPage_fi.qm</file>
+        <file>translations/StartPage_fr.qm</file>
+        <file>translations/StartPage_it.qm</file>
+        <file>translations/StartPage_nl.qm</file>
+        <file>translations/StartPage_no.qm</file>
+        <file>translations/StartPage_ru.qm</file>
+        <file>translations/StartPage_se.qm</file>
+        <file>translations/StartPage_uk.qm</file>
+        <file>translations/StartPage_pt.qm</file>
+        <file>translations/StartPage_hr.qm</file>
+        <file>translations/StartPage_zh.qm</file>
+        <file>translations/StartPage_ja.qm</file>
+        <file>translations/StartPage_hu.qm</file>
     </qresource>
 </RCC> 
