+ fixed Draft translations
git-svn-id: https://free-cad.svn.sourceforge.net/svnroot/free-cad/trunk@5189 e8eeb9e2-ec13-0410-a4a9-efa5cf37419d

--- a/src/Mod/Draft/Resources/Draft.qrc
+++ b/src/Mod/Draft/Resources/Draft.qrc
@@ -53,6 +53,8 @@
         <file>translations/Draft_pt.qm</file>
         <file>translations/Draft_hr.qm</file>
         <file>translations/Draft_zh.qm</file>
+        <file>translations/Draft_ja.qm</file>
+        <file>translations/Draft_hu.qm</file>
         <file>ui/userprefs-base.ui</file>
         <file>ui/userprefs-import.ui</file>
     </qresource>
