--- a/src/Mod/Arch/Resources/Arch.qrc
+++ b/src/Mod/Arch/Resources/Arch.qrc
@@ -15,5 +15,21 @@
         <file>icons/Arch_SectionPlane.svg</file>
         <file>icons/Arch_Window.svg</file>
         <file>ui/archprefs-base.ui</file>
+        <file>translations/Arch_af.qm</file>
+        <file>translations/Arch_de.qm</file>
+        <file>translations/Arch_es.qm</file>
+        <file>translations/Arch_fi.qm</file>
+        <file>translations/Arch_fr.qm</file>
+        <file>translations/Arch_it.qm</file>
+        <file>translations/Arch_nl.qm</file>
+        <file>translations/Arch_no.qm</file>
+        <file>translations/Arch_ru.qm</file>
+        <file>translations/Arch_se.qm</file>
+        <file>translations/Arch_uk.qm</file>
+        <file>translations/Arch_pt.qm</file>
+        <file>translations/Arch_hr.qm</file>
+        <file>translations/Arch_zh.qm</file>
+        <file>translations/Arch_ja.qm</file>
+        <file>translations/Arch_hu.qm</file>
     </qresource>
 </RCC> 
