+ added Draft2Sketch command, converts bidir between Sketch and Draft
git-svn-id: https://free-cad.svn.sourceforge.net/svnroot/free-cad/trunk@5227 e8eeb9e2-ec13-0410-a4a9-efa5cf37419d

--- a/src/Mod/Draft/Resources/Draft.qrc
+++ b/src/Mod/Draft/Resources/Draft.qrc
@@ -34,6 +34,7 @@
         <file>icons/Draft_Draft.svg</file>
         <file>icons/Draft_2DShapeView.svg</file>
         <file>icons/Draft_Wipe.svg</file>
+        <file>icons/Draft_Draft2Sketch.svg</file>
         <file>patterns/concrete.svg</file>
         <file>patterns/cross.svg</file>
         <file>patterns/line.svg</file>
