+ extended Draft2Sketch tool with items from RFE492
git-svn-id: https://free-cad.svn.sourceforge.net/svnroot/free-cad/trunk@5238 e8eeb9e2-ec13-0410-a4a9-efa5cf37419d

--- a/src/Mod/Draft/Resources/ui/userprefs-import.ui
+++ b/src/Mod/Draft/Resources/ui/userprefs-import.ui
@@ -88,6 +88,11 @@ If color mapping is choosed, you must choose a color mapping file containing a t
             <string>Create parametric objects</string>
            </property>
           </item>
+          <item>
+           <property name="text">
+            <string>Create Sketches</string>
+           </property>
+          </item>
          </widget>
         </item>
        </layout>
