+ add task panel for projections (j-dowsett)
git-svn-id: https://free-cad.svn.sourceforge.net/svnroot/free-cad/trunk@5262 e8eeb9e2-ec13-0410-a4a9-efa5cf37419d

--- a/src/Mod/Drawing/Gui/Resources/Drawing.qrc
+++ b/src/Mod/Drawing/Gui/Resources/Drawing.qrc
@@ -14,6 +14,7 @@
         <file>icons/actions/drawing-landscape.svg</file>
         <file>icons/actions/drawing-portrait-A4.svg</file>
         <file>icons/actions/drawing-view.svg</file>
+        <file>icons/actions/drawing-orthoviews.svg</file>
         <file>translations/Drawing_af.qm</file>
         <file>translations/Drawing_de.qm</file>
         <file>translations/Drawing_es.qm</file>
