--- a/src/Mod/PartDesign/Gui/TaskRevolutionParameters.ui
+++ b/src/Mod/PartDesign/Gui/TaskRevolutionParameters.ui
@@ -27,12 +27,12 @@
       <widget class="QComboBox" name="axis">
        <item>
         <property name="text">
-         <string>Vertical</string>
+         <string>Vertical sketch axis</string>
         </property>
        </item>
        <item>
         <property name="text">
-         <string>Horizontal</string>
+         <string>Horizontal sketch axis</string>
         </property>
        </item>
       </widget>
