+ added preliminary Arch Axis system
git-svn-id: https://free-cad.svn.sourceforge.net/svnroot/free-cad/trunk@5280 e8eeb9e2-ec13-0410-a4a9-efa5cf37419d

--- a/src/Mod/Arch/Resources/Arch.qrc
+++ b/src/Mod/Arch/Resources/Arch.qrc
@@ -22,6 +22,8 @@
         <file>icons/Arch_Site_Tree.svg</file>
         <file>icons/Arch_Structure_Tree.svg</file>
         <file>icons/Arch_Window_Tree.svg</file>
+        <file>icons/Arch_Axis.svg</file>
+        <file>icons/Arch_Axis_Tree.svg</file>
         <file>ui/archprefs-base.ui</file>
         <file>translations/Arch_af.qm</file>
         <file>translations/Arch_de.qm</file>
